src/assets/css/app.scss
//import bootstrap css/scss
@import "~bootstrap/scss/bootstrap";

//fontawsome css/scss
@import "~@fortawesome/fontawesome-free/scss/fontawesome";

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  height: 100%; /*takes size of browser window*/
  width: 100%;
  overflow: hidden;
}

body {
  font-family: "Roboto", sans-serif;
  line-height: 1.4;
}

a {
  text-decoration: none;
}

p {
  margin: 0.75rem 0;
}

/* Utility Classes */
.container {
  max-width: 1100px;
  margin: auto;
  padding: 0 2rem;
  overflow: hidden;
}

.text-center {
  text-align: center;
}

.text-primary {
  color: #93cb52;
}

.bg-light {
  background: #f4f4f4;
  color: #333;
}

.bg-dark {
  background: #333;
  color: #fff;
}

.bg-primary {
  background: #93cb52;
  color: #fff;
}

.l-heading {
  font-size: 4rem;
  margin-bottom: 0.75rem;
  line-height: 1.1;
}

.m-heading {
  font-size: 2rem;
  margin-bottom: 0.75rem;
  line-height: 1.1;
}

.lead {
  font-size: 1.3rem;
  margin-bottom: 2rem;
}

.py-1 {
  padding: 1.5rem 0;
}
.py-2 {
  padding: 2rem 0;
}
.py-3 {
  padding: 3rem 0;
}

.p-1 {
  padding: 1.5rem;
}
.p-2 {
  padding: 2rem;
}
.p-3 {
  padding: 3rem;
}

.btn {
  display: inline-block;
  color: #fff;
  background: #ed1f1f;
  padding: 0.5rem 2rem;
  border: none;

  // border-radius: 5px;
}

// .btn:hover {
//   background: #7ab436;
// }

.btn-dark {
  background: #333;
  color: #fff;
}

.list {
  margin: 0.5rem 0;
  list-style: none;
}

.list li {
  padding: 0.5rem 0;
  border-bottom: #444 dotted 1px;
}

img {
  width: 100%;
}

/* Navbar */

#navbar-section {
  background: #fff;
  .contact-top {
    position: relative;
    height: 0px;
    top: 10px;
    left: 800px;
    z-index: 2;

    a {
      text-decoration: none;
      padding: 20px;
      font-size: 8px;
      color: #fff;
      text-align: center;

      img {
        width: 15px;
        height: 15px;
      }
    }
  }
  .contact-top-social {
    position: relative;
    height: 0px;
    top: 10px;
    left: 1200px;
    z-index: 2;
    padding: 0px;

    a {
      text-decoration: none;

      font-size: 8px;
      color: #fff;
      text-align: center;
      padding-right: 7px;

      img {
        width: 10px;
        height: 10px;
      }
    }
  }
  #navbar {
    display: flex;
    position: sticky;
    top: 0;
    background: url("../imgs/cmsNav.png") no-repeat center center/cover;
    color: #fff;
    justify-content: space-between;
    z-index: 1;
    padding: 1rem;
    .cmc-logo-country-list {
      display: flex;
      justify-content: space-around;
      height: 50px;
      margin-bottom: 30px;
      //background:#fff;
      .dropdown {
        width: 50px;
        margin-left: 50px;
        margin-top: 40px;
        position: relative;
        .select {
          background: #fff;
          color: #333;
          display: flex;
          border: 2px #fff solid;
          padding: 2px;
          width: 70px;
          cursor: pointer;
          transition: background 0.3s;
          &:hover {
            background: #f4f4f4;
          }
          .caret {
            width: 0;
            height: 0;
            border-left: 5px solid transparent;
            border-left: 5px solid transparent;
            border-top: 6px solid #212529;
            transition: 0.3s;
          }
        }
        .menu {
          list-style: none;
          padding: 0.2em 0.5em;
          border: 1px #363a43 solid;
          background: #323741;
          color: #fff;
          position: absolute;
          top: 2em;
          left: 50%;
          width: 100%;
          transform: translateX(-50%);
          opacity: 0;
          display: none;
          transition: 0.2s;
          z-index: 1;
          li {
            padding: 0.7em 0.5em;
            margin: 0.3em 0;
            cursor: pointer;
            &:hover {
              background: #f4f4f4;
            }
          }
        }
      }
      img {
        width: 50px;
        margin-left: 210px;
        margin-top: 40px;
      }
    }
    .nav-buttons {
      margin-top: 40px;
      margin-right: 180px;

      .btn-red {
        color: #fff;
      }
      .btn-white {
        background: #fff !important;
        border: 1px #000 solid;
        color: #000;
        border-radius: none;
      }
    }
  }
}

/*===========================
| | | | Home Section with carousel slider landing page
=============================
 */

#home-section {
  height:100vh;
  .carousel-caption {
    position: absolute;
    top: 150px;
    left: -550px;
   
  }
  .land-page-button {
    a {
      display: inline-block;
      color: #fff;
      text-decoration: none;
      background: #ed1f1f;
      text-align: center;
      padding: 0.5rem 2rem;
      margin: 1rem;
    }
  }
}
/*clicked styles
        (added laer in js)
    
        */
.selected-clicked {
  border: 2px #26489a solid;
  box-shadow: 0 0 0.8em #26489a;
}

/*rotate styles
        (added laer in js)
    
        */
.caret-rotate {
  transform: rotate(180deg);
}

/*active styles
        (added laer in js)
    
        */

.active {
  background: #212529;
}

/*open styles
        (added laer in js)
    
        */
.menu-open {
  display: block;
  opacity: 1;
}

